apps/ledger/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger
spec:
  replicas: 0
  template:
    metadata:
      annotations:
        homelab.dev/rollout-nonce: "2025-11-04-01"
    spec:
      containers:
        - name: ledger
          imagePullPolicy: Always
          # (only dev pulls each time; prod will pin digests later)
