apps/ledger/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-dev
spec:
  rules:
    - host: ledger.dev.jamaguchi.xyz   # your dev host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger
                port:
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: ledger
                port:
                  number: 80
